# ChangeLog for app-portage/gentoolkit-dev
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit-dev/ChangeLog,v 1.64 2009/05/12 18:57:11 idl0r Exp $

*gentoolkit-dev-0.2.6.11-r2 (12 May 2009)

  12 May 2009; Christian Ruppert <idl0r@gentoo.org>
  -gentoolkit-dev-0.2.6.11-r1.ebuild, +gentoolkit-dev-0.2.6.11-r2.ebuild,
  +files/echangelog.patch, -files/echangelog-git.patch:
  Revbump. echangelog: Update category/package when creating the initial
  ChangeLog, thanks to Serkan Kaba <serkan@gentoo.org>. Cleanup. Ignore .git
  dir when running echangelog in the repository root, fixes bug 199805
  c8,c13. Improved git_unknown_objects(), git status parsing improved.
  Thanks to Andrew Gaffney <agaffney@gentoo.org> for testing etc. Fix regex,
  bug 269557, thanks to Samuli Suominen <ssuominen@gentoo.org>.

*gentoolkit-dev-0.2.6.11-r1 (08 May 2009)

  08 May 2009; Christian Ruppert <idl0r@gentoo.org>
  +gentoolkit-dev-0.2.6.11-r1.ebuild, +files/echangelog-git.patch:
  Revbump. echangelog: Re-add files (git) if the copyright has been updated,
  thanks to Justin Lecher (jlec) <jlec@j-schmitz.net>.

*gentoolkit-dev-0.2.6.11 (07 May 2009)

  07 May 2009; Christian Ruppert <idl0r@gentoo.org>
  +gentoolkit-dev-0.2.6.11.ebuild:
  Version bump to 0.2.6.11. Fix git detection in echangelog. Add svn/git
  support to ebump as suggested in bug 256398. Improved die message in
  ekeyword, bug 257853. Don't eat newlines, bug 264146. Add new feature to
  echangelog which shows the changed files when using $EDITOR. New script
  'imlate' as suggested in bug 54725.

  05 May 2009; Paul Varner <fuzzyray@gentoo.org>
  gentoolkit-dev-0.2.6.2.ebuild, -gentoolkit-dev-0.2.6.4.ebuild,
  -gentoolkit-dev-0.2.6.5.ebuild, -gentoolkit-dev-0.2.6.6.ebuild,
  -gentoolkit-dev-0.2.6.8.ebuild, -gentoolkit-dev-0.2.6.9.ebuild:
  Removed older not needed ebuilds. Added RDEPEND=$DEPEND to
  gentoolkit-dev-0.2.6.2 ebuild.
