@@ -6,9 +6,11 @@ AUX gentoolkit-dev-0.2.6.2-Makefile.patch 672 RMD160 8570652efb73c788c89b593443f
 AUX gentoolkit-dev-0.2.6.4-glep-53-keywords-sorting.patch 380 RMD160 197749b3f1ac78f2cf064f854c545f0cc1ac0fdc SHA1 339d1b30ae29cb55fbace46a644c20aba0bdfc62 SHA256 f677f57d4823dc96e9d2f71cdee66d061a764130e364700b5869377028f4a656
 DIST gentoolkit-dev-0.2.6.10.tar.gz 47667 RMD160 f3a046ad204e24777579535de4847c4526905528 SHA1 a04fd6610eeaff8cb4d742d09cb07d3d8700fc72 SHA256 adaba726cdbd87971b65fedfc836e3e256f038bc1b5f82ef50834186c088ed0e
 DIST gentoolkit-dev-0.2.6.11.tar.gz 49161 RMD160 a7fa0c40be246342147902986fa8062248a1b101 SHA1 f9e0dc5f161978a0aa7be62305ff34672e0bf201 SHA256 490e209f47e8826c36d65ad498ee4c3a7e015970ea603cca7195c448e125355e
+DIST gentoolkit-dev-0.2.6.12.tar.gz 49593 RMD160 15661eb1ce031232875c068d208e006c263aa48a SHA1 b0297305a474dae1d235c738503a776e7dbc6120 SHA256 daf6bd493cb82e7d0b62994141ab3345a8862f3fb2afc65e58378c8e34d10ae5
 DIST gentoolkit-dev-0.2.6.2.tar.gz 42928 RMD160 3f3e4fa292f3fcf3a997c1500b2fbee2d491b03c SHA1 218b4b5dbcc879c0aed8579909c5c211dc1747c8 SHA256 cfb474ecdcf6008b964aa57debd94925d2b7f5b5af28836c6801838df6df8221
 EBUILD gentoolkit-dev-0.2.6.10.ebuild 1389 RMD160 260ebd4cc1a7ae0c36b8af78aabecc378c5cfe95 SHA1 919123632c80f88e516df4344a596793dee5f210 SHA256 28f8deb2a6f5f1196bee2d187192ad6ccae32bfd400ddf58d4249ff63b966160
 EBUILD gentoolkit-dev-0.2.6.11-r2.ebuild 998 RMD160 5b6d172584d456089d33c39930f807be03ae14c6 SHA1 38fe0b044f1664d0ed6939780eec4f5ee18c3261 SHA256 9abdf20051cf8752ed21c4aae6ae12540ca6d03281cec6019af467aa73f1d177
+EBUILD gentoolkit-dev-0.2.6.12.ebuild 930 RMD160 1869786350a81d4461d9e8154d738ef0d783dabf SHA1 04a2fd1ea77615005df529c90be7bce342f8f22f SHA256 226080d7871a4f70e397a1f9f55bb099e7cbc4b299592bb7dbbda49566a7456e
 EBUILD gentoolkit-dev-0.2.6.2.ebuild 1307 RMD160 2525f3adb015ec90526e315f3b5087b7904abdf2 SHA1 5d4b4814a3c577b654082ffe10cdcc449c57869e SHA256 98d1590eb5822810b65de1ec819860673872cc36d93793c504ca60d8bb65d9ac
-MISC ChangeLog 10509 RMD160 e8383c95fa6e425521cafd0da2fe795302a7ee28 SHA1 3d61d437db82c666257f1a645090e7a397272d6c SHA256 cd4ef611a444a7433cd1548183266f1b5648be01cf1a5164bf4454da6b8b6a2d
+MISC ChangeLog 10720 RMD160 aa4dc771960b5135ac7ed5f13b377919ad8644bb SHA1 fb6ba9d1d40e7126cbdc2589798b8b2c59733a03 SHA256 577192de10bdc8a666b1eaea6027591f87d70f430e67de14cce9c5b6d2eafa69
 MISC metadata.xml 282 RMD160 0eb345cd4d45d200be98d46ef58d9c7d984d0fea SHA1 e884a6236439bc56617e7fe1c48fc10a356e01a3 SHA256 bbc59170a0b8682ed3a03f67bafc63610875532ab87b33a3ad2695482624f5a8
