@@ -1,0 +1,28 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit-dev/gentoolkit-dev-0.2.6.12.ebuild,v 1.1 2009/06/11 16:46:11 idl0r Exp $
+
+DESCRIPTION="Collection of developer scripts for Gentoo"
+HOMEPAGE="http://www.gentoo.org/proj/en/portage/tools/index.xml"
+SRC_URI="mirror://gentoo/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~ppc-aix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+DEPEND="dev-lang/python"
+RDEPEND="${DEPEND}
+	sys-apps/portage
+	dev-lang/perl"
+
+src_install() {
+	make DESTDIR="${D}/${EPREFIX}" install-gentoolkit-dev || die
+}
+
+pkg_postinst() {
+	ewarn "The gensync utility has been deprecated in favor of"
+	ewarn "app-portage/layman. It is still available in"
+	ewarn "${EROOT}usr/share/doc/${PF}/deprecated/ for use while"
+	ewarn "you migrate to layman."
+}
